--- a/pom.xml
+++ b/pom.xml
@@ -95,11 +95,11 @@
 	
 	<distributionManagement>
 	
-	    <releaseRepository>
+	    <repository>
 	      <id>nexus</id>
 	      <name>SKM Technologies Releases Nexus Repository</name>
 	      <url>http://18.117.119.193:8081/nexus/repository/Devops-release/</url>
-	    </releaseRepository>
+	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
