--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
+		<sonar.host.url>http://18.219.191.219:9000/</sonar.host.url>
 		<sonar.login>1864764655a7eafaab68428abf9074852cefa2bb</sonar.login>
 		<!--
 		<sonar.host.url>http://3.145.58.75:9000/</sonar.host.url>
